@@ -4,9 +4,9 @@ services:
   #   docker run -it --rm --network container:dse_compose-coordinator-1 cassandra:latest cqlsh -u cassandra -p cassandra
   #     create keyspace default_keyspace WITH replication = {'class': 'SimpleStrategy', 'replication_factor': 1};
 
-  # Development mode with latest taf
+  # Development mode with latest tag
   coordinator:
-    image: stargateio/coordinator-dse-next:v2.1.0-BETA-18
+    image: stargateio/coordinator-dse-next:v2.1
     networks:
       - stargate
     ports:
@@ -28,7 +28,7 @@ services:
       retries: 10
 
   data-api:
-    image: stargateio/data-api:v1.0.20
+    image: stargateio/data-api:v1.0.20-ct1
     depends_on:
       coordinator:
         condition: service_healthy
