@@ -1,0 +1,1 @@
+SUSPENDED until access to the image is configured in CI/CD
